--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "salesfusion/jasperphp",
+  "name": "salesfusion/reporter",
   "description": "Create Reports in PHP with JasperReports",
   "license": "MIT",
   "keywords": [],
