--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,10 @@
 {
-  "name": "salesfusion/reporter",
-  "description": "Create Reports in PHP with JasperReports",
-  "license": "MIT",
-  "keywords": [],
-  "authors": [],
-  "autoload": {
-    "psr-4": {
-      "JasperPHP\\": "src/"
-    }
-  },
-  "require": {
-    "paragonie/random_compat": "^2.0|^1.4"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "4.8.*"
-  }
+    "name": "mathe/jasper-reports",
+    "authors": [
+        {
+            "name": "Matheus V. Garcez",
+            "email": "matheusvgarcez@gmail.com"
+        }
+    ],
+    "require": {}
 }
