--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   },
   "require": {
-    "paragonie/random_compat": "^2.0|^1.4"
+    "paragonie/random_compat": ">=2"
   },
   "require-dev": {
     "phpunit/phpunit": "4.8.*"
